Implement critical security fixes: JWT validation, session management, CSRF protection, security headers, password strength validation
Co-authored-by: ommanoj88 <127044672+ommanoj88@users.noreply.github.com>