@@ -1,5 +1,6 @@
 package com.supplychainrisk.config;
 
+import com.supplychainrisk.filter.SecurityHeadersFilter;
 import com.supplychainrisk.security.FirebaseAuthenticationFilter;
 import com.supplychainrisk.security.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,6 +13,9 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CsrfTokenRepository;
+import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -29,6 +33,15 @@ public class SecurityConfig {
     
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    @Autowired
+    private SecurityHeadersFilter securityHeadersFilter;
+    
+    @Autowired
+    private CsrfTokenRepository csrfTokenRepository;
+    
+    @Autowired
+    private CsrfTokenRequestAttributeHandler csrfTokenRequestAttributeHandler;
 
     @Value("${cors.allowed.origins}")
     private String allowedOrigins;
@@ -37,17 +50,30 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
+            .csrf(csrf -> csrf
+                .csrfTokenRepository(csrfTokenRepository)
+                .csrfTokenRequestHandler(csrfTokenRequestAttributeHandler)
+                .ignoringRequestMatchers("/auth/login", "/auth/register", "/health", "/public/**", "/mock-apis/**")
+            )
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .headers(headers -> headers
+                .frameOptions(frameOptions -> frameOptions.deny())
+                .contentTypeOptions(contentTypeOptions -> {})
+                .httpStrictTransportSecurity(hstsConfig -> hstsConfig
+                    .maxAgeInSeconds(31536000)
+                    .includeSubDomains(true)
+                )
+            )
             .authorizeHttpRequests(authz -> authz
-                .requestMatchers("/", "/health", "/public/**").permitAll()
-                .requestMatchers("/auth/login", "/auth/register").permitAll()
-                .requestMatchers("/auth/verify").authenticated()
-                .requestMatchers("/auth/user", "/auth/logout").authenticated()
+                .requestMatchers("/", "/health", "/public/**", "/v3/api-docs/**", "/swagger-ui/**").permitAll()
+                .requestMatchers("/auth/login", "/auth/register", "/auth/forgot-password", "/auth/reset-password").permitAll()
+                .requestMatchers("/mock-apis/**").permitAll()
+                .requestMatchers("/auth/verify", "/auth/user", "/auth/logout").authenticated()
                 .requestMatchers("/admin/**").hasRole("ADMIN")
                 .requestMatchers("/supply-manager/**").hasAnyRole("ADMIN", "SUPPLY_MANAGER")
                 .anyRequest().authenticated()
             )
+            .addFilterBefore(securityHeadersFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterAfter(firebaseAuthenticationFilter, JwtAuthenticationFilter.class);
 
@@ -57,9 +83,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(allowedOrigins));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // More restrictive CORS configuration
+        configuration.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "X-XSRF-TOKEN"));
+        configuration.setExposedHeaders(Arrays.asList("X-XSRF-TOKEN"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
